--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -61,13 +61,13 @@ footer p {
   font-weight: bold;
 }
 
-.home .athletes-selector {
+.home .cars-selector {
   clear: both;
   padding: 2em;
   text-align: center;
 }
 
-.home .athletes-selector .athlete-preview {
+.home .cars-selector .car-preview {
   border: 1px solid #ccc;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   display: inline-block;
@@ -78,12 +78,12 @@ footer p {
   width: 100%;
 }
 
-.home .athletes-selector .athlete-preview img {
+.home .cars-selector .car-preview img {
   margin: 0;
   width: 100%;
 }
 
-.home .athletes-selector .athlete-preview .name {
+.home .cars-selector .car-preview .name {
   color: #030303;
   display: inline-block;
   font-size: 1.6em;
@@ -96,7 +96,7 @@ footer p {
   width: 100%;
 }
 
-.home .athletes-selector .athlete-preview .medals-count {
+.home .cars-selector .car-preview {
   background: #fff;
   border-radius: 2px;
   display: inline-block;
@@ -110,7 +110,7 @@ footer p {
   vertical-align: middle;
 }
 
-nav.athletes-menu {
+nav.carvana-menu {
   margin: 0 auto;
   max-width: 800px;
   padding: 2em;
@@ -118,7 +118,7 @@ nav.athletes-menu {
   width: 100%;
 }
 
-nav.athletes-menu a {
+nav.carvana-menu a {
   font-size: 1.6em;
   margin: 0 1em 1em 0;
 }
@@ -128,7 +128,7 @@ nav.athletes-menu a.active {
   text-decoration: none;
 }
 
-.athlete {
+.carvana {
   border: 1px solid #ccc;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   margin: 0 auto;
@@ -136,7 +136,7 @@ nav.athletes-menu a.active {
   width: 100%;
 }
 
-.athlete header {
+.carvana header {
   background: #ccc;
   background-position: center center;
   background-repeat: no-repeat;
@@ -145,12 +145,12 @@ nav.athletes-menu a.active {
   height: 200px;
 }
 
-.athlete .picture-container {
+.carvana .picture-container {
   margin: -160px 0 0 0;
   padding: 0 1em 0 1em;
 }
 
-.athlete .picture-container img {
+.carvana .picture-container img {
   border-radius: 4px;
   border: 8px solid #fff;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
@@ -159,67 +159,16 @@ nav.athletes-menu a.active {
   width: 200px;
 }
 
-.athlete .picture-container h2 {
+.carvana .picture-container h2 {
   display: inline;
   font-size: 3em;
   padding: 0 0 0 .5em;
   width: auto;
 }
 
-.athlete .flag .icon {
-  display: inline-block;
-  padding-bottom: .1em;
-  width: auto;
-}
-
-.athlete .description,
-.athlete .medals {
+.carvana .description {
   font-size: 1.6em;
   padding: 1em;
-}
-
-.athlete .medals p {
-  font-size: 1em;
-}
-
-.athlete .medals li {
-  list-style: none;
-}
-
-.athlete .medals .symbol {
-  border-radius: 50%;
-  display: inline-block;
-  font-size: .8em;
-  height: 1.6em;
-  justify-content: center;
-  margin: 5px;
-  text-align: center;
-  width: 1.6em;
-}
-
-.athlete .medals .symbol.symbol-G {
-  color: #daa520;
-  background-color: #fff6de;
-  border: 2px solid #daa520;
-}
-
-.athlete .medals .symbol.symbol-S {
-  color: #383738;
-  background-color: #b9b5b5;
-  border: 2px solid #383738;
-}
-
-.athlete .medals .symbol.symbol-B {
-  color: #6b1919;
-  background-color: #ea96a1;
-  border: 2px solid #6E1924;
-}
-
-.navigateBack {
-  font-size: 1.6em;
-  padding: 2em;
-  text-align: center;
-  text-decoration: none;
 }
 
 #abar {
